IDE suggestions